FrontEnd/Modules/Base/Css/kendo.wiser.css
/* ... */
.k-colorpicker .k-selected-color .k-i-line {
	border: 1px solid var(--medium-color);
	box-sizing: border-box;
	height: 100%;
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	transform: none;
	width: 100%;
}
.k-colorpicker .k-selected-color .k-i-line:before,
.k-colorpicker .k-selected-color .k-i-line:after {
	background: linear-gradient(to top right, transparent calc(50% - 1px), var(--medium-color), transparent calc(50%+ 1px));
	content: "";
	height: 100%;
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	width: 100%;
}
.k-colorpicker .k-selected-color .k-i-line:after {
	transform: scaleX(-1);
}

/* KENDO - DATEPICKER */
.k-daterangepicker .k-textbox-container {
	width: calc(50% - 2px);
}
.k-daterangepicker .k-dateinput {
	background: var(--white-color);
}
.k-dateinput .k-i-warning {
	right: 11px;
}

/* KENDO - GRID */
.k-filter-row th, .k-filter-row td {
	padding: 0 !important;
}
.k-table-thead {
	background-color: inherit;
}
.item .k-grid .k-loading-mask {
	display: none;
}
.k-grid-toolbar {
	overflow: visible;
}
.k-grid-toolbar,
.k-grouping-header {
	padding: .2em;
}
.k-header.k-grid-toolbar {
	border-color: var(--border-color);
	background-color: var(--active-tab);
}
.k-grid-content {
	resize: vertical;
}
.k-grid-header th.k-header {
	background-color: var(--bg-color);
	color: var(--black-color);
	padding: 1.35em .6em 1em .6em;
	border-right-color: var(--bg-color);
	border-left-color: var(--bg-color);
	border-right-width: 1px;
	border-left-width: 1px;
	position: relative;
}
.k-grid-header th.k-header:hover {
	border-right-color: var(--border-color);
	border-left-color: var(--border-color);
	overflow: visible;
	z-index: 10;
}
.k-grid-header th.k-header:hover:after {
	background-color: var(--dark-txt);
	border-radius: 2px;
	color: var(--white-color);
	content: attr(data-title);
	font-size: 11px;
	padding: 1px 4px;
	position: absolute;
	left: 0;
	top: 0;
	white-space: nowrap;
	z-index: 10;
}
.k-grid-header th.k-header .k-link {
	color: var(--light-txt);
	font-weight: bold;
	position: relative;
	text-overflow: clip;
}
.k-header .k-grid-filter,
.k-header .k-header-column-menu {
	bottom: 6px;
	right: 5px;
}
.k-grid-header th.k-header .k-grid-filter.k-active:before {
	content: "";
	background-color: var(--bg-color);
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: 0;
}
.k-grid-header th.k-header .k-active span {
	position: relative;
	z-index: 5;
}
.k-grid-header .k-grid-filter.k-state-border-down {
	background-color: var(--filter-color);
}
.k-grid-header th.k-header .k-grid-filter.k-active:before {
	content: "";
	background-color: var(--color-1);
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: 0;
}
.k-grid-header th.k-header .k-grid-filter.k-active .k-icon {
	color: var(--white-color);
	opacity: 1;
}
.k-grid-header .k-link .k-icon.k-i-sort-asc-sm,
.k-grid-header .k-link .k-icon.k-i-sort-desc-sm {
	margin-top: 0;
}
.k-grid-header th.k-header:first-child .k-checkbox,
.k-grid tbody td:first-child .k-checkbox {
	margin-right: 15px;
}

.k-grid .k-header .k-button,
.k-grid tbody .k-button {
	font-family: var(--medium-txt);
	font-size: 14px;
	line-height: 16px;
	padding: 8px;
}
.k-grid-filter .k-icon {
	color: var(--light-txt);
}
.k-grid td {
	padding: var(--padding-large);
	white-space: nowrap;
	border-bottom-width: 0px!important;
}
.k-grid-content tr:last-child>td,
.k-grid-content-locked tr:last-child>td {
	border-bottom-width: 1px;
}
.k-filtercell > span {
	display: flex;
	padding-right: 0;
	gap: 0;
}
.k-filtercell > span > span,
.k-filter-row .k-dropdown-operator,
.k-filtercell > span > .k-button {
	margin: 0;
}
.k-filtercell .k-input,
.k-filtercell .k-picker {
	border: none;
	width: fit-content;
}
.k-filtercell .k-autocomplete {
	width: 100%;
}
.k-grid input.k-textbox:hover, .k-grid input.k-textbox:focus {
	background: var(--white-color);
	box-shadow: 0 2px 6px rgba(0, 0, 0, .2), 0 2px 3px rgba(0, 0, 0, .05);
}
.k-grid tbody .k-button {
	min-width: 40px;
	padding: 4px 6px;
	height: 24px;
	margin-right: 5px;
}
.k-grid .k-command-cell>.k-button+.k-button {
	-webkit-margin-start: 0;
	margin-inline-start: 0;
	margin-right: 5px;
}
k-filter-menu .k-autocomplete,
.k-filter-menu .k-combobox,
.k-filter-menu .k-datepicker,
.k-filter-menu .k-datetimepicker,
.k-filter-menu .k-dropdown,
.k-filter-menu .k-dropdownlist,
.k-filter-menu .k-dropdowntree,
.k-filter-menu .k-numerictextbox,
.k-filter-menu .k-textbox,
.k-filter-menu .k-timepicker {
	width: 100%;
}

.k-toolbar-item:has(>.hidden) {
    display: none;
}

.k-button.progress {
	position: relative;
	
	&:after {
		content: '';
		display: unset;
		opacity: 1;
		position: absolute;
		top: unset;
		left: unset;
		right: unset;
		bottom: 0;
		height: 3px;
		background-color: var(--kendo-color-primary);
		width: calc(var(--progress, 0) * 1%);
	}
}

/* Grid in an iframe / full window */
.gridViewMode .k-grid-content {
	resize: none;
}
.maximize-sub-entities-grid-window .k-toolbar .full-screen {
	display: none;
}
.maximize-sub-entities-grid-window .pane-content {
	min-height: 100%;
}

/* filtering */
.k-filter-menu-container {
	padding: 10px 10px 0;
	min-width: 260px;
}
.k-filter-menu .k-dropdown,
.k-filter-menu .k-dropdownlist {
	width: 100%;
}
.k-filter-menu .k-dropdown .k-picker,
.k-filter-menu .k-dropdownlist .k-picker {
	border-bottom: none;
}
.k-filter-menu .k-state-default{
	border: 1px solid var(--border-color);
}
.k-filter-menu .k-textbox {
	border: 1px solid var(--border-color);
	line-height: 32px;
}
.k-filter-menu .k-filter-help-text {
	padding-bottom: 10px;
}
.k-filter-menu-container label {
	cursor: pointer;
	display: inline-block;
	height: 20px;
	line-height: 20px;
}
.k-filter-menu-container label > [type="radio"] {
	display: none;
}
.k-filter-menu-container label > [type="radio"] + span {
	display: inline-block;
	padding: 0 24px;
	position: relative;
	height: 20px;
	line-height: 22px;
}
/* ... */

